# digital-simulator-proto

./: CMakeLists.txt  README.md  README.txt  cutils.h  data.txt  funcs.h  panic.c  part1.c  prog.c  readtxt.c  utils.c  wave.vcd
boolean/: boolean.h  gates.c
cmd/main/: cli.c  main.c
internal/app/: digisim.c  funcs.h
internal/app/service/create/: create.c
internal/app/service/output/: output.c
internal/app/service/parse/: byindex.c  byname.c  parse.c
internal/app/service/simulate/: simulate.c
internal/app/service/update/: update.c
internal/pkg/boolean/: boolean.c  boolean.h
internal/pkg/cutils/: cutils.h  panic.c  readtxt.c
